==> samuelpoiraud/robot/QS/QS_ax12.c <==
#include "QS_ax12.h"
		#define AX12_UART_BAUDRATE  56700
		#define AX12_STATUS_RETURN_TIMEOUT 5
		#define AX12_STATUS_SEND_TIMEOUT 5
		#define AX12_STATUS_RETURN_MODE AX12_STATUS_RETURN_ONREAD
		#define AX12_INSTRUCTION_BUFFER_SIZE (5*AX12_NUMBER)
		#include "QS_watchdog.h"
		#define AX12_TIMER_init() WATCHDOG_init()
		#define AX12_TIMER_interrupt AX12_watchdog_timeout_recv
		#define AX12_TIMER_resetFlag()
		#define AX12_TIMER_start(period_ms) AX12_watchdog_timeout_id = WATCHDOG_create(period_ms, &AX12_watchdog_timeout_recv)
		#define AX12_TIMER_stop() WATCHDOG_stop(AX12_watchdog_timeout_id)
		#define AX12_TIMER_DisableIT WATCHDOG_disable_timeout(AX12_watchdog_timeout_id)
		#define AX12_TIMER_EnableIT WATCHDOG_enable_timeout(AX12_watchdog_timeout_id)
		#include "QS_timer.h"
		#include <timer.h>	//Pour DisableIntTx et EnableIntTx
		#define AX12_TEMP_CONCAT_WITH_PREPROCESS(a,b,c) a##b##c
		#define AX12_TEMP_CONCAT(a,b,c) AX12_TEMP_CONCAT_WITH_PREPROCESS(a,b,c)
		#define AX12_TIMER_interrupt _ISR AX12_TEMP_CONCAT(_T, AX12_TIMER_ID, Interrupt)
			#define AX12_TIMER_resetFlag() AX12_TEMP_CONCAT(IFS0bits.T, AX12_TIMER_ID, IF) = 0
			#define AX12_TIMER_resetFlag() AX12_TEMP_CONCAT(IFS1bits.T, AX12_TIMER_ID, IF) = 0
		#define AX12_TIMER_init() TIMER_init()
		#define AX12_TIMER_start(period_ms) AX12_TEMP_CONCAT(TIMER, AX12_TIMER_ID, _run)(period_ms)
		#define AX12_TIMER_stop() AX12_TEMP_CONCAT(TIMER, AX12_TIMER_ID, _stop)()

static void AX12_state_machine(AX12_state_machine_event_e event) {
	static volatile int processing_state = 0;

	#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
		//Pour le deboggage (avec debug_printf à la fin de l'envoi/reception d'un paquet)
		static Uint8 AX12_UART2_reception_buffer[MAX_STATUS_PACKET_SIZE*2] = {0};
		Uint8 i, pos;
	#endif

//sécurisation des appels à cette fonction lorsque event == AX12_SME_NoEvent pour eviter que l'état AX12_SMS_ReadyToSend soit exécuté plusieurs fois
//si une IT arrive a un certain moment, elle sera executée complètement, donc processing_state reviendra à son état d'origine
	if(event == AX12_SME_NoEvent) {
//1) Si une IT arrive a ce moment, elle s'execute entièrement et change l'état de AX12_SMS_ReadyToSend en AX12_SMS_Sending, cet appel continuera et le switch branchera sur AX12_SMS_Sending, il n'y a rien de prévu pour AX12_SME_NoEvent donc cet appel ne fera rien au final
		if(processing_state > 0)
//2) Si une IT arrive a ce moment, elle s'executera pas, elle retournera sans rien faire car processing_state est > 0
			return;
//3) Si une IT arrive a ce moment, elle s'executera entièrement car processing_state == 0, l'état passera de AX12_SMS_ReadyToSend à AX12_SMS_Sending et cet appel de fonction ne fera rien comme au 1)
		processing_state = 1; //cette instruction DOIT être atomique
//4) Si une IT arrive a ce moment, elle ne s'executera pas car processing_state > 0
	} else if(event == AX12_SME_Timeout) {
		DisableIntU2RX;
		DisableIntU2TX;
	} else if(event == AX12_SME_RxInterrupt || event == AX12_SME_TxInterrupt) {
		AX12_TIMER_DisableIT;
	}

//Si une IT arrive avec event == AX12_SME_TxInterrupt, elle n'aura un effet que dans l'état AX12_SMS_Sending (et cette interruption ne devrai être lancée que après le putcUART2 dans AX12_SMS_ReadyToSend et pas dans AX12_SMS_Sending car une interruption n'est pas prioritaire sur elle-même)
//Si une IT arrive avec event == AX12_SME_RxInterrupt, elle n'aura un effet que dans l'état AX12_SMS_WaitingAnswer. Elle ne peut être lancée que si le timer n'a pas eu d'interruption et désactive l'interruption du timer
	
	switch(state_machine.state)
	{
		case AX12_SMS_ReadyToSend:
			if(event == AX12_SME_NoEvent)
			{
				//FIXME: Empeche des bugs, a voir pourquoi ... (juste le fait d'ajouter le debug_printf, une histoire de timings ...)
				//FIXME: Bugs constatés: (Ce code est appelée par le code à la ligne 1033 de ce fichier, après la reception d'un paquet de retour)
				//Reception de paquet douteux contenant des ID invalides (par ex, ID broadcast alors que justement, avec cet ID aucun renvoi n'est censé être fait ...)
				//Pas de problème de checksum à priori (donc l'AX12 envoi volontairement des ID dans le paquet de retour invalide ?) (à revérifier quand même, si c'est le cas, on va trop vite pour l'AX12)

				debug_printf("ax12 RIDLE: %d\n", U2STAbits.RIDLE);
				while(U2STAbits.URXDA)
					debug_printf("%d ", getcUART2());

				//FIXME: à tester sans le debug_printf d'au-dessus, mais je doute que cette verif règle le problème (RIDLE doit passer à 1 au début du bit de stop reçu d'après ce que j'ai compris)
				//Attend la fin d'une réception eventuelle d'un octet précédent
				//while(!U2STAbits.RIDLE);


				// Choix du paquet à envoyer et début d'envoi
				if(!AX12_instruction_queue_is_empty())
					state_machine.current_instruction = AX12_instruction_queue_get_current();
				else {	//s'il n'y a rien a faire, mettre en veille la machine a état, l'UART sera donc inactif (et mettre en mode reception pour ne pas forcer la sortie dont on défini la tension, celle non relié a l'AX12)
					while(!U2STAbits.TRMT);
					AX12_DIRECTION_PORT = RX_DIRECTION;
					break;
				}

				state_machine.state = AX12_SMS_Sending;
				state_machine.sending_index = 0;
				state_machine.receive_index = 0;


				#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
					debug_printf("AX12 Tx:");
					for(i = 0; i<state_machine.current_instruction.size; i++)
						debug_printf(" %02x", AX12_get_instruction_packet(i, &state_machine.current_instruction));
					debug_printf("\n");
				#endif
 

				AX12_DIRECTION_PORT = TX_DIRECTION;
				
				AX12_TIMER_start(AX12_STATUS_SEND_TIMEOUT);	//Pour le timeout d'envoi, ne devrait pas arriver

				state_machine.sending_index++;	//Attention! Nous devons incrementer sending_index AVANT car il y a un risque que l'interuption Tx arrive avant l'incrementation lorsque cette fonction est appellée par AX12_init() (qui n'est pas dans une interruption)

				putcUART2(AX12_get_instruction_packet(state_machine.sending_index-1, &state_machine.current_instruction));
			}
		break;

		case AX12_SMS_Sending:
			if(event == AX12_SME_TxInterrupt)
			{
				if(state_machine.sending_index < state_machine.current_instruction.size) {
					putcUART2(AX12_get_instruction_packet(state_machine.sending_index, &state_machine.current_instruction));
					state_machine.sending_index++;
				}
				else	//Le dernier paquet a été envoyé, passage en mode reception et attente de la réponse dans l'état AX12_SMS_WaitingAnswer s'il y a ou enchainement sur le prochain paquet à evnoyer (AX12_SMS_ReadyToSend)
				{
					AX12_TIMER_stop();
					AX12_TIMER_resetFlag();

					if(AX12_instruction_has_status_packet(state_machine.current_instruction))
					{
						//Attente de la fin de la transmition des octets
						//TRMT passe a 1 quand tout est envoyé (bit de stop inclu)
						//plus d'info ici: http://books.google.fr/books?id=ZNngQv_E0_MC&lpg=PA250&ots=_ZTiXKt-8p&hl=fr&pg=PA250
						while(!U2STAbits.TRMT);

						AX12_DIRECTION_PORT = RX_DIRECTION;

						U2STAbits.OERR = 0;

						//flush recv buffer
						while(U2STAbits.URXDA && U2STAbits.FERR)
							getcUART2();

						state_machine.state = AX12_SMS_WaitingAnswer;
						AX12_TIMER_start(AX12_STATUS_RETURN_TIMEOUT);	//Pour le timeout de reception, ne devrait pas arriver
					}
					else
					{
						AX12_instruction_queue_next();
						#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
							for(i=0; i<MAX_STATUS_PACKET_SIZE; i++)
								AX12_UART2_reception_buffer[i] = 0;
							pos = 0;
						#endif

						state_machine.state = AX12_SMS_ReadyToSend;
						AX12_state_machine(AX12_SME_NoEvent);
					}
				}
			} else if(event == AX12_SME_Timeout) {
				AX12_TIMER_stop();
				AX12_TIMER_resetFlag();
				debug_printf("AX12[%d]: send timeout !!\n", state_machine.current_instruction.id_servo);
				//U2MODEbits.UARTEN = 0;
				//AX12_UART2_init(AX12_BAUD_RATE);

				AX12_instruction_queue_next();
				state_machine.state = AX12_SMS_ReadyToSend;
				AX12_state_machine(AX12_SME_NoEvent);
			}
		break;

		case AX12_SMS_WaitingAnswer:
			if(event == AX12_SME_RxInterrupt)
			{
				//AX12_update_status_packet s'occupe de son initialisation et de son remplissage au fur et a mesure que les octets arrivent
				static AX12_status_packet_t status_response_packet;
				// Stockage de la réponse dans un buffer, si toute la réponse alors mise à jour des variables du driver et state = AX12_SMS_ReadyToSend avec éxécution

				if(U2STAbits.FERR) { //ignore error bits
					getcUART2();
					break;
				}

				#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
				AX12_UART2_reception_buffer[pos] = getcUART2();

				if(!AX12_update_status_packet(AX12_UART2_reception_buffer[pos++], state_machine.receive_index, &status_response_packet))
				#else
				Uint8 data_byte = getcUART2();
				if(!AX12_update_status_packet(data_byte, state_machine.receive_index, &status_response_packet))
				#endif
				{
					//debug_printf("AX12: invalid packet, reinit reception\n");
					state_machine.receive_index = 0;	//si le paquet n'est pas valide, on reinitialise la lecture de paquet
					//pos = 0;
					//for(i=0; i<MAX_STATUS_PACKET_SIZE*2; i++)
					//	AX12_UART2_reception_buffer[i] = 0;
					break;
				} else {
					state_machine.receive_index++;
				}


				if(U2STAbits.OERR && !U2STAbits.URXDA)
					U2STAbits.OERR = 0;

					
				if(AX12_status_packet_is_full(status_response_packet, state_machine.receive_index))
				{
					AX12_TIMER_stop();
					AX12_TIMER_resetFlag();

					#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
						debug_printf("AX12 Rx:");
						for(i = 0; i<state_machine.receive_index; i++)
							debug_printf(" %02x", AX12_UART2_reception_buffer[i]);
						debug_printf("\n");
					#endif

					if(status_response_packet.id_servo != state_machine.current_instruction.id_servo) {
						debug_printf("Wrong servo ID: %d instead of %d\n", status_response_packet.id_servo, state_machine.current_instruction.id_servo);
					} else {
						//pour être sur de ne pas avoir le bit 7 a 1, si l'AX12 le met a 1, on met tous les bits a 1
						if(status_response_packet.error & 0x80)
							AX12_on_the_robot[status_response_packet.id_servo].last_status.error = 0xFF;
						else AX12_on_the_robot[status_response_packet.id_servo].last_status.error = status_response_packet.error & 0x7F;
						AX12_on_the_robot[status_response_packet.id_servo].last_status.param = status_response_packet.param;

						#ifdef VERBOSE_MODE
							if(status_response_packet.error & AX12_ERROR_VOLTAGE)
								debug_printf("AX12[%d] Fatal: Voltage error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_ANGLE)
								debug_printf("AX12[%d] Error: Angle error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_OVERHEATING)
								debug_printf("AX12[%d] Fatal: Overheating error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_RANGE)
								debug_printf("AX12[%d] Error: Range error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_CHECKSUM)
								debug_printf("AX12[%d] Error: Checksum error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_OVERLOAD)
								debug_printf("AX12[%d] Fatal: Overload error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_INSTRUCTION)
								debug_printf("AX12[%d] Error: Instruction error\n", status_response_packet.id_servo);
							if(status_response_packet.error & 0x80)
								debug_printf("AX12[%d] Fatal: Unknown (0x80) error\n", status_response_packet.id_servo);
							if(status_response_packet.error)
								debug_printf("AX12[%d] Cmd: %d, addr: 0x%x, param: 0x%x\n",
										state_machine.current_instruction.id_servo,
										state_machine.current_instruction.type,
										state_machine.current_instruction.address,
										state_machine.current_instruction.param);
						#endif
					}
					AX12_instruction_queue_next();
					state_machine.state = AX12_SMS_ReadyToSend;
					AX12_state_machine(AX12_SME_NoEvent);
				}
			} else if(event == AX12_SME_Timeout) {
				AX12_TIMER_stop();
				AX12_TIMER_resetFlag();
				#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
					debug_printf("AX12[%d] timeout Rx:", state_machine.current_instruction.id_servo);
					for(i = 0; i<MAX_STATUS_PACKET_SIZE*2; i++)
						debug_printf(" %02x", AX12_UART2_reception_buffer[i]);
					debug_printf("\n, recv idx: %d\n", state_machine.receive_index);
				#endif
				debug_printf("AX12[%d] timeout Rx\n", state_machine.current_instruction.id_servo);
				AX12_on_the_robot[state_machine.current_instruction.id_servo].last_status.error = AX12_ERROR_TIMEOUT;
				AX12_on_the_robot[state_machine.current_instruction.id_servo].last_status.param = 0;
				AX12_instruction_queue_next();
				state_machine.state = AX12_SMS_ReadyToSend;
				AX12_state_machine(AX12_SME_NoEvent);
			}
		break;
	}

	if(event == AX12_SME_RxInterrupt || event == AX12_SME_TxInterrupt) {
		AX12_TIMER_EnableIT;
	} else if(event == AX12_SME_Timeout) {
		EnableIntU2RX;
		EnableIntU2TX;
	} else if(event == AX12_SME_NoEvent) {
		processing_state = 0;
	}
}

static void AX12_UART2_init(Uint32 uart_speed)
{
	Uint16 uart_brg_speed = (CLK_FREQ-8*uart_speed)/(16*uart_speed);	//equivalent a CLK_FREQ/(16*AX12_UART_BAUDRATE)-1 + 0.5 sans nombre floatant (+0.5 pour que la troncation du nombre réel donne l'arrondi
	Uint32 uart_real_speed = CLK_FREQ/(16*(uart_brg_speed+1));

	Uint16 U2MODEvalue;
	Uint16 U2STAvalue;
	U2MODEvalue = UART_EN & UART_IDLE_CON &
		UART_DIS_WAKE & UART_DIS_LOOPBACK &
		UART_DIS_ABAUD & UART_NO_PAR_8BIT &
		UART_1STOPBIT;
	U2STAvalue = UART_INT_TX_BUF_EMPTY &	//l'interruption Tx est lancée quand le buffer de sortie est completement vide, ie quand toutes les données ont été envoyé, de cette façon on peut changer la direction du l'uart après une interruption Tx et un minimum d'attente de la fin de transmission
		UART_TX_PIN_NORMAL &
		UART_TX_ENABLE &
		UART_INT_RX_CHAR &
		UART_ADR_DETECT_DIS &
		UART_RX_OVERRUN_CLEAR ;

	if((uart_real_speed > uart_speed && (uart_real_speed - uart_speed) > uart_speed/34) || (uart_real_speed < uart_speed && (uart_speed - uart_real_speed) > uart_speed/34))
		debug_printf("AX12: Warning: Le taux d'erreur du baudrate dépasse 3%%\r\n");

	//debug_printf("AX12: real baudrate = %ld, goal baudrate = %ld, brg divisor value = %d\r\n", uart_real_speed, uart_speed, uart_brg_speed);

	OpenUART2(U2MODEvalue, U2STAvalue, uart_brg_speed);
	ConfigIntUART2(UART_RX_INT_DIS & UART_RX_INT_PR5 &
		UART_TX_INT_DIS & UART_TX_INT_PR5);
	EnableIntU2RX;
	EnableIntU2TX;
}
