==> samuelpoiraud/robot/STM32/QS/QS_ax12.c <==
#include "QS_ax12.h"
#include "stm32f4xx_usart.h"
		#define AX12_UART_ID 2
	#define AX12_UART_Ptr USART1
	#define AX12_UART_Interrupt USART1_IRQHandler
	#define AX12_UART_Interrupt_IRQn USART1_IRQn
	#define AX12_UART_Ptr USART2
	#define AX12_UART_Interrupt USART2_IRQHandler
	#define AX12_UART_Interrupt_IRQn USART2_IRQn
		#define AX12_UART_BAUDRATE  56700
		#define AX12_STATUS_RETURN_TIMEOUT 50	//Ne pas mettre une valeur trop proche de celle prévue, l'AX12 répond parfois avec un delai plus long
		#define AX12_STATUS_SEND_TIMEOUT 10
		#define AX12_STATUS_RETURN_MODE AX12_STATUS_RETURN_ONREAD
		#define AX12_INSTRUCTION_BUFFER_SIZE (5*AX12_NUMBER)
		#define TIMER_SRC_TIMER_ID BUTTONS_TIMER
		#define TIMER_SRC_USE_WATCHDOG
	#include "QS_setTimerSource.h"
	#define TX_DIRECTION 1
	#define RX_DIRECTION 0
	#define INST_PING 				0x01
	#define INST_READ 				0x02
	#define INST_WRITE 				0x03
	#define INST_REG_WRITE 			0x04
	#define INST_ACTION 			0x05
	#define AX12_MEM_SIZE		0x32
	#define AX12_MIN_VALUE_0	0x00
	#define AX12_MIN_VALUE_1	0x01
	#define AX12_MIN_VALUE_34	0x02
	#define AX12_MIN_VALUE_50	0x03
	#define AX12_MAX_VALUE_1	0x70
	#define AX12_MAX_VALUE_2	0x60
	#define AX12_MAX_VALUE_127	0x50
	#define AX12_MAX_VALUE_150	0x40
	#define AX12_MAX_VALUE_250	0x30
	#define AX12_MAX_VALUE_253	0x20
	#define AX12_MAX_VALUE_254	0x10
	#define AX12_MAX_VALUE_1023	0x00
		#define AX12_MODEL_NUMBER_L 			0x00
		#define AX12_MODEL_NUMBER_H				0x01
		#define AX12_VERSION					0x02

static void AX12_state_machine(AX12_state_machine_event_e event) {
	static volatile int processing_state = 0;

	#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
		//Pour le deboggage (avec debug_printf à la fin de l'envoi/reception d'un paquet)
		static Uint8 AX12_UART2_reception_buffer[MAX_STATUS_PACKET_SIZE*2] = {0};
		Uint8 i, pos;
	#endif

//sécurisation des appels à cette fonction lorsque event == AX12_SME_NoEvent pour eviter que l'état AX12_SMS_ReadyToSend soit exécuté plusieurs fois
//si une IT arrive a un certain moment, elle sera executée complètement, donc processing_state reviendra à son état d'origine
	if(event == AX12_SME_NoEvent) {
//1) Si une IT arrive a ce moment, elle s'execute entièrement et change l'état de AX12_SMS_ReadyToSend en AX12_SMS_Sending, cet appel continuera et le switch branchera sur AX12_SMS_Sending, il n'y a rien de prévu pour AX12_SME_NoEvent donc cet appel ne fera rien au final
		if(processing_state > 0)
//2) Si une IT arrive a ce moment, elle s'executera pas, elle retournera sans rien faire car processing_state est > 0
			return;
//3) Si une IT arrive a ce moment, elle s'executera entièrement car processing_state == 0, l'état passera de AX12_SMS_ReadyToSend à AX12_SMS_Sending et cet appel de fonction ne fera rien comme au 1)
		processing_state = 1;
//4) Si une IT arrive a ce moment, elle ne s'executera pas car processing_state > 0
	} else if(event == AX12_SME_Timeout) {
		NVIC_DisableIRQ(AX12_UART_Interrupt_IRQn);
	} else if(event == AX12_SME_RxInterrupt || event == AX12_SME_TxInterrupt) {
		TIMER_SRC_TIMER_DisableIT();
	}

//Si une IT arrive avec event == AX12_SME_TxInterrupt, elle n'aura un effet que dans l'état AX12_SMS_Sending (et cette interruption ne devrai être lancée que après le putcUART2 dans AX12_SMS_ReadyToSend et pas dans AX12_SMS_Sending car une interruption n'est pas prioritaire sur elle-même)
//Si une IT arrive avec event == AX12_SME_RxInterrupt, elle n'aura un effet que dans l'état AX12_SMS_WaitingAnswer. Elle ne peut être lancée que si le timer n'a pas eu d'interruption et désactive l'interruption du timer

	switch(state_machine.state)
	{
		case AX12_SMS_ReadyToSend:
			if(event == AX12_SME_NoEvent)
			{
				// Choix du paquet à envoyer et début d'envoi
				if(!AX12_instruction_queue_is_empty())
					state_machine.current_instruction = AX12_instruction_queue_get_current();
				else {	//s'il n'y a rien a faire, mettre en veille la machine a état, l'UART sera donc inactif (et mettre en mode reception pour ne pas forcer la sortie dont on défini la tension, celle non relié a l'AX12)
					while(!USART_GetFlagStatus(AX12_UART_Ptr, USART_FLAG_TC));
					AX12_DIRECTION_PORT = RX_DIRECTION;
					break;
				}

				state_machine.state = AX12_SMS_Sending;
				state_machine.sending_index = 0;
				state_machine.receive_index = 0;


				#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
					debug_printf("AX12 Tx:");
					for(i = 0; i<state_machine.current_instruction.size; i++)
						debug_printf(" %02x", AX12_get_instruction_packet(i, &state_machine.current_instruction));
					debug_printf("\n");
				#endif
 

				AX12_DIRECTION_PORT = TX_DIRECTION;
				
				TIMER_SRC_TIMER_start_ms(AX12_STATUS_SEND_TIMEOUT);	//Pour le timeout d'envoi, ne devrait pas arriver

				state_machine.sending_index++;	//Attention! Nous devons incrementer sending_index AVANT car il y a un risque que l'interuption Tx arrive avant l'incrementation lorsque cette fonction est appellée par AX12_init() (qui n'est pas dans une interruption)

				USART_SendData(AX12_UART_Ptr, AX12_get_instruction_packet(state_machine.sending_index-1, &state_machine.current_instruction));
			}
		break;

		case AX12_SMS_Sending:
			if(event == AX12_SME_TxInterrupt)
			{
				if(state_machine.sending_index < state_machine.current_instruction.size) {
					USART_SendData(AX12_UART_Ptr, AX12_get_instruction_packet(state_machine.sending_index, &state_machine.current_instruction));
					state_machine.sending_index++;
				}
				else	//Le dernier paquet a été envoyé, passage en mode reception et attente de la réponse dans l'état AX12_SMS_WaitingAnswer s'il y a ou enchainement sur le prochain paquet à evnoyer (AX12_SMS_ReadyToSend)
				{
					TIMER_SRC_TIMER_stop();
					TIMER_SRC_TIMER_resetFlag();

					if(AX12_instruction_has_status_packet(state_machine.current_instruction))
					{
						#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
							for(i=0; i<MAX_STATUS_PACKET_SIZE*2; i++)
								AX12_UART2_reception_buffer[i] = 0;
							pos = 0;
						#endif

						//Attente de la fin de la transmition des octets
						//TRMT passe a 1 quand tout est envoyé (bit de stop inclu)
						//plus d'info ici: http://books.google.fr/books?id=ZNngQv_E0_MC&lpg=PA250&ots=_ZTiXKt-8p&hl=fr&pg=PA250
						while(!USART_GetFlagStatus(AX12_UART_Ptr, USART_FLAG_TC));

						AX12_DIRECTION_PORT = RX_DIRECTION;

						//flush recv buffer
						while(USART_GetFlagStatus(AX12_UART_Ptr, USART_FLAG_ORE) || USART_GetFlagStatus(AX12_UART_Ptr, USART_FLAG_FE) || USART_GetFlagStatus(AX12_UART_Ptr, USART_FLAG_NE))
							USART_ReceiveData(AX12_UART_Ptr);

						state_machine.state = AX12_SMS_WaitingAnswer;

						TIMER_SRC_TIMER_start_ms(AX12_STATUS_RETURN_TIMEOUT);	//Pour le timeout de reception, ne devrait pas arriver
					}
					else
					{
						AX12_instruction_queue_next();
						state_machine.state = AX12_SMS_ReadyToSend;
						AX12_state_machine(AX12_SME_NoEvent);
					}
				}
			} else if(event == AX12_SME_Timeout) {
				TIMER_SRC_TIMER_stop();
				TIMER_SRC_TIMER_resetFlag();
				debug_printf("AX12[%d]: send timeout !!\n", state_machine.current_instruction.id_servo);
				//U2MODEbits.UARTEN = 0;
				//AX12_UART2_init(AX12_BAUD_RATE);

				AX12_instruction_queue_next();
				state_machine.state = AX12_SMS_ReadyToSend;
				AX12_state_machine(AX12_SME_NoEvent);
			}
		break;

		case AX12_SMS_WaitingAnswer:
			if(event == AX12_SME_RxInterrupt)
			{
				//AX12_update_status_packet s'occupe de son initialisation et de son remplissage au fur et a mesure que les octets arrivent
				static AX12_status_packet_t status_response_packet;
				// Stockage de la réponse dans un buffer, si toute la réponse alors mise à jour des variables du driver et state = AX12_SMS_ReadyToSend avec éxécution

				if(USART_GetFlagStatus(AX12_UART_Ptr, USART_FLAG_FE) | USART_GetFlagStatus(AX12_UART_Ptr, USART_FLAG_NE)) { //ignore error bits
					USART_ReceiveData(AX12_UART_Ptr);
					break;
				}

				#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
				AX12_UART2_reception_buffer[pos] = USART_ReceiveData(AX12_UART_Ptr);

				if(!AX12_update_status_packet(AX12_UART2_reception_buffer[pos++], state_machine.receive_index, &status_response_packet))
				#else
				Uint8 data_byte = USART_ReceiveData(AX12_UART_Ptr);
				if(!AX12_update_status_packet(data_byte, state_machine.receive_index, &status_response_packet))
				#endif
				{
					//debug_printf("AX12: invalid packet, reinit reception\n");
					state_machine.receive_index = 0;	//si le paquet n'est pas valide, on reinitialise la lecture de paquet
					//pos = 0;
					//for(i=0; i<MAX_STATUS_PACKET_SIZE*2; i++)
					//	AX12_UART2_reception_buffer[i] = 0;
					break;
				} else {
					state_machine.receive_index++;
				}


				if(AX12_status_packet_is_full(status_response_packet, state_machine.receive_index))
				{
					TIMER_SRC_TIMER_stop();
					TIMER_SRC_TIMER_resetFlag();

					#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
						debug_printf("AX12 Rx:");
						for(i = 0; i<state_machine.receive_index; i++)
							debug_printf(" %02x", AX12_UART2_reception_buffer[i]);
						debug_printf("\n");
					#endif

					if(status_response_packet.id_servo != state_machine.current_instruction.id_servo || status_response_packet.id_servo >= AX12_NUMBER) {
						debug_printf("Wrong servo ID: %d instead of %d\n", status_response_packet.id_servo, state_machine.current_instruction.id_servo);
					} else {
						//pour être sur de ne pas avoir le bit 7 a 1, si l'AX12 le met a 1, on met tous les bits a 1
						if(status_response_packet.error & 0x80)
							AX12_on_the_robot[status_response_packet.id_servo].last_status.error = 0xFF;
						else AX12_on_the_robot[status_response_packet.id_servo].last_status.error = status_response_packet.error & 0x7F;
						AX12_on_the_robot[status_response_packet.id_servo].last_status.param = status_response_packet.param;

						#ifdef VERBOSE_MODE
							if(status_response_packet.error & AX12_ERROR_VOLTAGE)
								debug_printf("AX12[%d] Fatal: Voltage error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_ANGLE)
								debug_printf("AX12[%d] Error: Angle error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_OVERHEATING)
								debug_printf("AX12[%d] Fatal: Overheating error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_RANGE)
								debug_printf("AX12[%d] Error: Range error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_CHECKSUM)
								debug_printf("AX12[%d] Error: Checksum error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_OVERLOAD)
								debug_printf("AX12[%d] Fatal: Overload error\n", status_response_packet.id_servo);
							if(status_response_packet.error & AX12_ERROR_INSTRUCTION)
								debug_printf("AX12[%d] Error: Instruction error\n", status_response_packet.id_servo);
							if(status_response_packet.error & 0x80)
								debug_printf("AX12[%d] Fatal: Unknown (0x80) error\n", status_response_packet.id_servo);
							if(status_response_packet.error)
								debug_printf("AX12[%d] Cmd: %d, addr: 0x%x, param: 0x%x\n",
										state_machine.current_instruction.id_servo,
										state_machine.current_instruction.type,
										state_machine.current_instruction.address,
										state_machine.current_instruction.param);
						#endif
					}
					AX12_instruction_queue_next();
					state_machine.state = AX12_SMS_ReadyToSend;
					AX12_state_machine(AX12_SME_NoEvent);
				}
			} else if(event == AX12_SME_Timeout) {
				TIMER_SRC_TIMER_stop();
				TIMER_SRC_TIMER_resetFlag();

				#if defined(VERBOSE_MODE) && defined(AX12_DEBUG_PACKETS)
					debug_printf("AX12[%d] timeout Rx:", state_machine.current_instruction.id_servo);
					for(i = 0; i<pos; i++)
						debug_printf(" %02x", AX12_UART2_reception_buffer[i]);
					debug_printf(", recv idx: %d\n", state_machine.receive_index);
					debug_printf(" Original cmd: Id: %02x Cmd: %02x Addr: %02x param: %04x\n", state_machine.current_instruction.id_servo, state_machine.current_instruction.type, state_machine.current_instruction.address, state_machine.current_instruction.param);
				#endif
				
				if(USART_GetFlagStatus(AX12_UART_Ptr, USART_FLAG_RXNE))
					debug_printf("AX12 timeout too small\n");

				AX12_on_the_robot[state_machine.current_instruction.id_servo].last_status.error = AX12_ERROR_TIMEOUT;
				AX12_on_the_robot[state_machine.current_instruction.id_servo].last_status.param = 0;
				AX12_instruction_queue_next();
				state_machine.state = AX12_SMS_ReadyToSend;
				AX12_state_machine(AX12_SME_NoEvent);
			}
		break;
	}

	if(event == AX12_SME_RxInterrupt || event == AX12_SME_TxInterrupt) {
		TIMER_SRC_TIMER_EnableIT();
	} else if(event == AX12_SME_Timeout) {
		NVIC_EnableIRQ(AX12_UART_Interrupt_IRQn);
	} else if(event == AX12_SME_NoEvent) {
		processing_state = 0;
	}
}

static void AX12_UART2_init(Uint32 uart_speed)
{
	NVIC_InitTypeDef NVIC_InitStructure;
	USART_InitTypeDef USART_InitStructure;

	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannel = AX12_UART_Interrupt_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 10;

	NVIC_Init(&NVIC_InitStructure);


	//PORTS_uarts_init();

#if AX12_UART_ID == 1
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
#elif AX12_UART_ID == 2
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);
#endif

	USART_OverSampling8Cmd(AX12_UART_Ptr, ENABLE);

	USART_InitStructure.USART_BaudRate = uart_speed;
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_Parity = USART_Parity_No;
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
	USART_Init(AX12_UART_Ptr, &USART_InitStructure);


	/* Enable USART */
	USART_Cmd(AX12_UART_Ptr, ENABLE);

	USART_ITConfig(AX12_UART_Ptr, USART_IT_RXNE, ENABLE);
	USART_ITConfig(AX12_UART_Ptr, USART_IT_TXE, ENABLE);
}
